# Rail_Crack_Monitoring

./: .gitignore  start.sh  tmux_launch_cart.sh
ArduinoCode/: ArduinoCode.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/battery_monitor/lib/battery_monitor/: battery_monitor
install/daemon/share/daemon/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/daemon/share/daemon/launch/: init.launch.py  playback_launch.py
log/: latest_build
src/battery_monitor/: setup.py
src/cart_control/: full_system.launch.py  package.xml  setup.py
src/cart_control/cart_control/: cart_control_node.py
src/log/: SYSDKLog.txt
src/multi_camera_pkg/: setup.py
src/multi_camera_pkg/multi_camera_pkg/: multi_camera_publisher.py
src/multi_camera_publisher/: package.xml  setup.cfg  setup.py
src/rosbag_control/: setup.cfg  setup.py
src/rosbag_control/rosbag_control/: rosbag_control_node.py
src/system_monitor/: setup.py
src/system_monitor/system_monitor/: frequency_monitor_node.py
ublox_config/: my_f9p.yaml
web_ui/: control.html  control2.html  control3.html  control4.html  control5.html  control6.html  control_Base.html  control_justtogglenotworking.html  control_new.html  control_responsive.html  control_unified.html  control_v2.1.html  control_v2.html  main.js  package.json  set_param_server.py  styles.css
web_ui/js/: arduino_output.js  cart_control.js  config.js  frequency_monitor.js  logging.js  recording_control.js  ros_connection.js  system_status.js
(+45 files in other folders)
